# caferoam

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  ERROR-PREVENTION.md  Makefile  SPEC.md  SPEC_CHANGELOG.md  TODO.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  stryker.config.mjs  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  coverage-check.yml  quality-gate.yml
app/: globals.css  layout.tsx  page.test.tsx  page.tsx
app/(admin)/: layout.tsx
app/map/: page.test.tsx  page.tsx
backend/: .gitignore  main.py  pyproject.toml
backend/api/: admin.py  admin_shops.py  admin_taxonomy.py  auth.py  checkins.py  deps.py  lists.py  profile.py  search.py  shops.py  stamps.py  submissions.py
backend/core/: config.py  exceptions.py  slugify.py
backend/importers/: cafe_nomad.py
backend/middleware/: admin_audit.py  request_id.py
backend/models/: types.py
backend/providers/embeddings/: openai_adapter.py
backend/providers/maps/: mapbox_adapter.py
backend/providers/scraper/: apify_adapter.py  interface.py
backend/scripts/: backfill_slugs.py  eval_utils.py  run_coverage_audit.py  run_pipeline_batch.py  run_search_eval.py  run_tag_audit.py  run_takeout_import.py  run_url_import.py
backend/services/: checkin_service.py  lists_service.py  profile_service.py
backend/tests/: test_checkin_api.py  test_profile_api.py  test_profile_service.py  test_stamps_api.py
backend/tests/api/: conftest.py  test_admin.py  test_admin_shops.py  test_admin_shops_import.py  test_admin_taxonomy.py  test_auth_routes.py  test_checkins.py  test_lists.py  test_shop_checkins.py  test_shop_reviews.py  test_shops.py
backend/tests/core/: test_code_quality.py  test_slugify.py
backend/tests/importers/: test_cafe_nomad.py  test_google_takeout.py
backend/tests/middleware/: test_admin_audit.py
backend/tests/models/: test_camel_serialization.py
backend/tests/providers/: test_scraper_factory.py
backend/tests/services/: test_checkin_service.py  test_lists_service.py
backend/tests/workers/: test_check_urls.py  test_scrape_batch_handler.py  test_scrape_shop_handler.py
backend/workers/: persist.py  queue.py
backend/workers/handlers/: check_urls.py  scrape_batch.py  scrape_shop.py  staleness_sweep.py
components/: session-tracker.tsx
components/__tests__/: session-tracker.test.tsx
components/checkins/: checkin-photo-grid.test.tsx  checkin-photo-grid.tsx  photo-uploader.test.tsx  photo-uploader.tsx
components/discovery/: filter-pills.test.tsx  filter-pills.tsx  filter-sheet.test.tsx  filter-sheet.tsx  mode-chips.test.tsx  mode-chips.tsx  search-bar.test.tsx  search-bar.tsx  suggestion-chips.test.tsx  suggestion-chips.tsx
components/lists/: list-card.test.tsx  list-card.tsx  rename-list-dialog.test.tsx  rename-list-dialog.tsx  save-to-list-sheet.test.tsx  save-to-list-sheet.tsx
components/map/: map-desktop-card.test.tsx  map-desktop-card.tsx  map-list-view.test.tsx  map-list-view.tsx  map-mini-card.test.tsx  map-mini-card.tsx  map-view.test.tsx  map-view.tsx
components/navigation/: app-shell.test.tsx  app-shell.tsx  bottom-nav.test.tsx  bottom-nav.tsx  header-nav.test.tsx  header-nav.tsx
components/profile/: checkin-history-tab.test.tsx  checkin-history-tab.tsx  lists-tab.test.tsx  lists-tab.tsx  profile-header.test.tsx  profile-header.tsx
components/reviews/: review-card.tsx  review-form.test.tsx  review-form.tsx  reviews-section.test.tsx  reviews-section.tsx  star-rating.test.tsx  star-rating.tsx  tag-confirmation.test.tsx  tag-confirmation.tsx
components/shops/: attribute-chips.tsx  bookmark-button.test.tsx  bookmark-button.tsx  menu-highlights.test.tsx  menu-highlights.tsx  recent-checkins-strip.test.tsx  recent-checkins-strip.tsx  share-button.test.tsx  share-button.tsx  shop-card.test.tsx  shop-card.tsx  shop-description.test.tsx  shop-description.tsx  shop-hero.tsx  shop-identity.tsx  shop-map-thumbnail.test.tsx  shop-map-thumbnail.tsx  sticky-checkin-bar.tsx
components/stamps/: stamp-detail-sheet.test.tsx  stamp-detail-sheet.tsx  stamp-passport.test.tsx  stamp-passport.tsx
components/ui/: avatar.tsx  drawer.tsx  tabs.tsx
docs/: e2e-journeys.md  testing-philosophy.md
docs/decisions/: 2026-03-04-profile-data-fetching-parallel-hooks.md  (+6 more)
lib/: utils.ts
scripts/: doctor.sh
(+155 files in other folders)
