[project]
name = "caferoam-backend"
version = "0.1.0"
description = "CafeRoam FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "supabase>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "resend>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "sentry-sdk[fastapi]>=2.0",
    "structlog>=24.0",
    "posthog>=3.0",
    "apify-client>=2.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
