[project]
name = "caferoam-backend"
version = "0.1.0"
description = "CafeRoam FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "supabase>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "resend>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "sentry-sdk[fastapi]>=2.0",
    "structlog>=24.0",
    "posthog>=3.0",
    "apify-client>=2.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "mutmut>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
warn_return_any = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["posthog.*"]
ignore_missing_imports = true

# Anthropic SDK: asyncMessages.create() overloads don't match mypy's strict overload
# resolution. Upstream issue — cannot fix without SDK changes.
[[tool.mypy.overrides]]
module = ["providers.llm.anthropic_adapter"]
ignore_errors = true

# Posthog SDK: missing type exports (Client, identify). No stubs available.
[[tool.mypy.overrides]]
module = ["providers.analytics.posthog_adapter"]
ignore_errors = true

# Supabase JSON type debt in workers: response.data is typed as broad JSON union.
# Workers index into it directly; cast() would require restructuring the DB access pattern.
[[tool.mypy.overrides]]
module = [
    "workers.persist",
    "workers.handlers.staleness_sweep",
    "workers.handlers.account_deletion",
]
ignore_errors = true

# Supabase JSON type debt in admin API modules. These use the same response.data pattern
# as workers above; the admin endpoints are low-traffic and not user-auth-critical.
[[tool.mypy.overrides]]
module = [
    "api.stamps",
    "api.admin_taxonomy",
    "api.admin_shops",
    "api.admin",
    "main",
]
ignore_errors = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.coverage.run]
branch = true
source = ["api", "services", "providers", "core", "models", "middleware"]
omit = ["tests/*", ".venv/*", "conftest.py"]

[tool.coverage.report]
show_missing = true

[tool.mutmut]
paths_to_mutate = "api/,services/,providers/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
